# laboratory2

./: ArraySequence.h  CMakeLists.txt  Complex.h  DynamicArray.cpp  DynamicArray.h  LinkedList.cpp  LinkedList.h  LinkedListSequence.h  Matrix.h  Sequence.h  SquareMatrix.cpp  SquareMatrix.h  Tests.cpp  main.cpp  menu.cpp  menu.h
