cmake_minimum_required(VERSION 3.17)
project(laboratory2)

set(CMAKE_CXX_STANDARD 14)

add_executable(laboratory2 main.cpp ArraySequence.h LinkedList.h LinkedListSequence.h Sequence.h DynamicArray.h DynamicArray.cpp LinkedList.cpp Matrix.h SquareMatrix.cpp SquareMatrix.h menu.h menu.cpp Complex.h Tests.cpp)